--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 .venv
-db.sqlite3
+backend/db.sqlite3
+backend/__pycache__
+frontend/__pycache__
 __pycache__
+*.pyc
+backend/staticfiles/
+backend/media/
